alignment bug

--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -16,8 +16,8 @@
    @include mobile{
     flex-direction: column;
     width: 100%;
-    padding-top: 20%;
-    padding-bottom: 10%;
+    padding-top: 1%;
+    padding-bottom: 5%;
     
      
       
