--- a/src/components/work/project.scss
+++ b/src/components/work/project.scss
@@ -93,6 +93,7 @@
          @include mobile{
         transform: none !important;
         text-align: center;
+         padding-bottom: 20%;
       
      }
 
